--- a/integtrated-swagger/package.json
+++ b/integtrated-swagger/package.json
@@ -4,11 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "gulp",
-    "diff": "diff dist/swagger.yaml assets/swagger.yaml",
     "edit": "cross-env swagger_swagger_editorDir=node_modules/swagger-editor swagger_swagger_fileName=dist/swagger.yaml swagger project edit",
-    "ui-all": "npm run build && cp dist/swagger.yaml public/assets && node server.js",
-    "ui": "cp dist/swagger.yaml public/assets && node server.js"
+    "diff": "diff ./dist/swagger.yaml ./assets/swagger.yaml",
+    "build": "gulp",
+    "copy": "cp ./dist/swagger.yaml ./public/assets",
+    "ui": "npm-run-all -s build copy swagger",
+    "swagger": "node ./server.js",
+    "api": "node ./src/fake/config.js",
+    "lift": "npm-run-all -p api ui"
   },
   "devDependencies": {
     "cross-env": "^5.1.4",
@@ -18,7 +21,8 @@
     "swagger": "^0.7.5"
   },
   "dependencies": {
-    "express": "^4.16.3",
+    "express": "^4.16.4",
+    "npm-run-all": "^4.1.5",
     "opn": "^5.3.0"
   }
 }
