--- a/integtrated-swagger/package.json
+++ b/integtrated-swagger/package.json
@@ -4,14 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "edit": "cross-env swagger_swagger_editorDir=node_modules/swagger-editor swagger_swagger_fileName=dist/swagger.yaml swagger project edit",
-    "diff": "diff ./dist/swagger.yaml ./assets/swagger.yaml",
+    "edit": "cross-env npm-run-all -s build copy && swagger_swagger_editorDir=node_modules/swagger-editor swagger_swagger_fileName=dist/swagger.yaml swagger project edit",
     "build": "gulp",
     "copy": "cp ./dist/swagger.yaml ./public/assets",
     "ui": "npm-run-all -s build copy swagger",
     "swagger": "node ./server.js",
     "api": "node ./src/fake/config.js",
-    "lift": "npm-run-all -p api ui"
+    "lift": "npm-run-all -p api ui",
+    "lift:edit": "npm-run-all -p api edit"
   },
   "devDependencies": {
     "cross-env": "^5.1.4",
@@ -21,7 +21,9 @@
     "swagger": "^0.7.5"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "npm-run-all": "^4.1.5",
     "opn": "^5.3.0"
   }
