--- a/integtrated-swagger/package.json
+++ b/integtrated-swagger/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "faker": "^4.1.0",
+    "json-server": "^0.14.0",
     "npm-run-all": "^4.1.5",
     "opn": "^5.3.0"
   }
