--- a/integrated-swagger-mw-es6-webpack-gulp/package.json
+++ b/integrated-swagger-mw-es6-webpack-gulp/package.json
@@ -4,16 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "edit": "cross-env swagger_swagger_editorDir=node_modules/swagger-editor swagger_swagger_fileName=dist/swagger.yaml swagger project edit",
+    "edit": "cross-env wait-on ./dist/swagger.yaml && swagger_swagger_editorDir=node_modules/swagger-editor swagger_swagger_fileName=dist/swagger.yaml swagger project edit",
     "build": "gulp webpack",
     "watch": "gulp",
     "api": "wait-on ./dist/app.dist.js && node ./dist/app.dist.js",
-    "api:edit": "wait-on ./dist/app.dist.js && cross-env SKIP_OPN=1 node ./dist/app.dist.js",
     "api:debug": "wait-on ./dist/app.dist.js && node --inspect-brk ./dist/app.dist.js",
-    "lift:edit": "npm-run-all -p watch api:edit edit",
-    "lift": "npm-run-all -p watch api",
+    "lift:edit": "npm-run-all -p watch api edit openbrowser:edit",
+    "lift": "npm-run-all -p watch api openbrowser",
     "prelift:edit": "cross-env rm -rf dist",
-    "prelift": "cross-env rm -rf dist"
+    "prelift": "cross-env rm -rf dist",
+    "openbrowser": "wait-on http://127.0.0.1:2999 && browser-sync start --port 3000 -p http://127.0.0.1:2999 --startPath /api-docs -f ./dist/**/*.* --reload-delay 500",
+    "openbrowser:edit": "wait-on http://127.0.0.1:2999 && browser-sync start --port 3000 -p http://127.0.0.1:2999 --no-ui --no-open -f ./dist/**/*.* --reload-delay 500"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -32,12 +33,12 @@
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
+    "browser-sync": "^2.26.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "gulp-util": "^3.0.8",
     "json-server": "^0.14.0",
-    "opn": "^5.3.0",
     "swagger": "^0.7.5",
     "swagger-express-mw": "^0.7.0",
     "swagger-ui-express": "^4.0.2"
