add Posts swagger definitions

--- a/integrated-swagger-mw-es6-webpack-gulp/src/yaml/definitions.yaml
+++ b/integrated-swagger-mw-es6-webpack-gulp/src/yaml/definitions.yaml
@@ -31,3 +31,18 @@ Books:
   type: array
   items:
     $ref: '#/definitions/Book'
+
+Post:
+  properties:
+    id:
+      type: number
+      uniqueItems: true
+    title:
+      type: string
+    author:
+      type: string
+
+Posts:
+  type: array
+  items:
+    $ref: '#/definitions/Post'
