--- a/integrated-swagger-mw-es6-webpack-gulp/src/yaml/paths/Posts.yaml
+++ b/integrated-swagger-mw-es6-webpack-gulp/src/yaml/paths/Posts.yaml
@@ -1,16 +1,16 @@
-'/users/{userId}/books':
+'/posts/{postId}':
   parameters:
-    - name: userId
+    - name: postId
       in: path
       required: true
       description: ID of user that we want to find
       type: number
   get:
     tags:
-      - User's Books
-    summary: Get all books of this user in system
+      - User's Post
+    summary: Get all Post of this user in system
     responses:
       '200':
         description: OK
         schema:
-          $ref: '#/definitions/Books'
+          $ref: '#/definitions/Post'
